# one

./: .gitignore  CMakeLists.txt  README.md  add.cpp  build_mymath.bat  main.cpp  math.cpp  math.h  mymath.cpp  mymath.h  run_mymath.bat  test_math.cpp
